--- a/style.css
+++ b/style.css
@@ -3,3 +3,100 @@
     padding: 0;
     font-family: 'Rubik', sans-serif;
 }
+.Ali-main{
+    display: flex;
+    justify-content: center;
+}
+.Ali-center{
+    width: 85%;
+}
+.Ali-User{
+    width: 100%;
+    display: flex;
+    /* justify-content: center; */
+    justify-content: space-around;
+    padding: 40px 20px;
+}
+.Ali-navad ,.Ali-si , .Ali-panj{
+    display: flex;
+    justify-content: center;
+    width: 30%;
+}
+.Ali-navad{
+    border-right: 2px solid 
+    #EEEFF2; 
+
+}
+.Ali-navad i{
+    margin-right: 15px;
+    display: flex;
+    color: brown;
+    /* text-align: center; */
+    align-items: center;
+    padding: 5px 10px;
+    background: #FFECEC;
+border-radius: 70%;
+}
+.Ali-si i{
+    margin-right: 15px;
+    display: flex;
+    color: brown;
+    /* text-align: center; */
+    align-items: center;
+    padding: 5px 10px;
+    background: #FFECEC;
+border-radius: 70%;
+}
+.Ali-si{
+  border-right: 2px solid #EEEFF2;  
+}
+.Ali-panj{
+   
+}
+.Ali-panj i{
+    margin-right: 15px;
+    display: flex;
+    color: brown;
+    /* text-align: center; */
+    align-items: center;
+    padding: 5px 10px;
+    background: #FFECEC;
+    border-radius: 70%;
+}
+.Ali-img_tex{
+    display: flex;
+    justify-content: center;
+    background-color:  #E5E5E5;
+    padding-top: 40px;
+    padding-bottom: 60px;
+}
+.Ali-TEXT{
+    display: flex;
+}
+.Ali-right{
+    padding-top: 50px;
+}
+.ALI_p{
+    font-weight: 400;
+font-size: 16px;
+line-height: 30px;
+padding-top: 25px;
+color: #4F5665;
+}
+.Ali-pow{
+    display: flex;
+    padding: 15px 5px;
+}
+.Ali-pow p{
+    padding-left: 15px;
+    font-weight: 400;
+font-size: 14px;
+color: #4F5665;
+}
+.Ali-right{
+    display: flex;
+    justify-content: center;
+}
+.Ali-right2{
+    width: 60%;
+}
